projects/storefrontstyles/scss/components/product/search/_searchbox.scss
@import '../../../theme';

%cx-searchbox {
  .hidden {
    display: none;
  }

  @include media-breakpoint-up(lg) {
    // we position the parent relative to ensure the absolute childs
    // can be aligned to the left of this parent
    position: relative;
  }

  z-index: 10;
  display: block;

  > * {
    z-index: 20;
    @include media-breakpoint-up(lg) {
      background-color: var(--cx-g-color-secondary);
      position: relative;
    }
  }

  &:not(.open) {
    .results {
      display: none;
    }
    @include media-breakpoint-down(md) {
      .reset {
        opacity: 0;
      }
    }
  }

  &:before {
    transition: background-color 0.4s;
    content: '';
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 0;
    z-index: 10;
  }
  &.open:before {
    background: rgba(0, 0, 0, 0.2);
    height: 100%;
  }

  a,
  .message {
    padding: 6px 16px;
    color: currentColor;
    user-select: none;
  }

  label {
    display: flex;
    margin: 0;
    padding: 6px;

    @include media-breakpoint-up(lg) {
      width: 25vw;

      // hide search icon when the input is dirty
      &.dirty cx-icon.search {
        display: none;
      }
    }

    input {
      background: none;
      border: none;
      outline: none;
      padding-left: 10px;

      @include media-breakpoint-down(md) {
        position: absolute;
        left: 0;
        top: 57px;
        width: 100%;
        background-color: var(--cx-g-color-secondary);
        padding: 6px;
        height: 48px;
        &:not(:focus) {
          opacity: 0;
        }
      }

      flex-basis: 100%;
      height: 35px;
      color: currentColor;
      z-index: 20;

      @include placeholder {
        color: currentColor;
      }
    }

    // hide reset icon when the input is empty
    &:not(.dirty) cx-icon.reset {
      display: none;
    }

    cx-icon {
      color: currentColor;
      flex-basis: 48px;
      text-align: center;
      cursor: pointer;
      &.reset {
        @include media-breakpoint-down(md) {
          position: absolute;
          right: 65px;
          z-index: 20;
          right: 20px;
          margin-top: 52px;
        }
      }
    }
  }

  .results {
    position: absolute;
    left: 0;
    width: 100%;
    color: #000;
    background-color: var(--cx-g-color-background);
    font-size: var(--cx-g-font-small, 1rem);

    @include media-breakpoint-down(md) {
      top: 104px;
      z-index: 10;
      height: 100%;
    }

    a {
      text-decoration: none;
      cursor: pointer;
      &:hover {
        background: var(--cx-g-color-light);
      }
    }
    .suggestions {
      display: flex;
      flex-wrap: wrap;
      a {
        flex: 100%;
        line-height: 2rem;
      }
    }
    .products {
      a {
        display: grid;
        grid-template-columns: 50px 1fr;
        grid-column-gap: 16px;

        border-top: solid 1px var(--cx-g-color-light);

        cx-media {
          grid-row: 1 / 3;
        }
        h4.name {
          text-overflow: ellipsis;
          font-size: inherit;

          /* Required for text-overflow to do anything */
          white-space: nowrap;
          overflow: hidden;
          .search-results-highlight {
            font-weight: bold;
          }
        }
      }
    }
  }
}

